Updated solutions page -Images Replace of solutions page of monitor tab section -fix madpage overlap video fix

--- a/mads.css
+++ b/mads.css
@@ -649,7 +649,7 @@ button {
 .apps .container .apps-details .category-apps {
 	display: grid;
 	grid-template-columns: 22% 22% 22% 22%;
-	grid-gap: 5%;
+	grid-gap: 4%;
 	/* height: 340px; */
 
 }
@@ -661,19 +661,21 @@ button {
 	border-radius: 5px;
 	background-color: #fff;
 	/* box-shadow: inset 0 0 15px #c56d3a; */
+	margin: 0 4px;
 }
 .apps .container .apps-details .category-apps .app-detail:hover {
 	/* -webkit-transform: translateY(-5px); 
    transform: translateY(-5px);  */
-	border-color: transparent;
+	/* border-color: transparent; */
 	/* border: 5px solid #c56d3a;  */
-	border: 4px solid #800000;
-	border-radius: 5px;
+	/* border: 4px solid #800000;
+	border-radius: 5px; */
 	/* box-shadow: none;  */
-	transform: scale(1.1);
-	max-height: 340px  !important;
-	max-width: 297px !important;
+	/* transform: scale(1.1);
+
 	transition: transform 330ms ease-in-out;
+	max-height: 340px  !important;
+	max-width: 297px !important; */
 }
 
 .apps .container .apps-details .category-apps .app-detail .upper {
